--- a/ProGrid.App/ProGrid.App.csproj
+++ b/ProGrid.App/ProGrid.App.csproj
@@ -104,5 +104,10 @@
       <Name>ProGrid.Common</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="MSBuild.ILMerge.Task">
+      <Version>1.1.3</Version>
+    </PackageReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
